--- a/infra/stackset-template/stackset-role.yaml
+++ b/infra/stackset-template/stackset-role.yaml
@@ -4,6 +4,8 @@ Resources:
   ProdSec:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: prodsec-role-lambda-verify-takeover
+      Description: "Role used by product security to verify presence of subdomain takeover vulnerability for the account"
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
