--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -2,8 +2,8 @@ name: Cloud Health Check on AWS
 
 on:
   workflow_dispatch:
-  push:
-  pull_request:
+  schedule:
+    - cron: '0 7 * * 2'  # Every tuesday at 7:00 UTC
 jobs:
   setup:
     name: Setup environment
