--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -3,7 +3,8 @@ name: Subdomain takeover monitoring tool health check on AWS
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 7 * * *' #Every day at 7:00 UTC
+    - cron: '0 7 * * 2' #Every tuesday at 7:00 UTC
+  push:
 jobs:
   setup:
     name: Setup environment
@@ -15,10 +16,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-      - name: Use Node.js 16
-        uses: actions/setup-node@9ced9a43a244f3ac94f13bfd896db8c8f30da67a
-        with:
-          node-version: 16
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@50ac8dd1e1b10d09dac7b8727528b91bed831ac0
         with:
@@ -60,3 +57,7 @@ jobs:
       - name: Delete DNS zone and cleanup records
         id: delete-dns-zone
         run: ./scripts/aws/delete_dns_zone.sh
+      - name: Invalidate OIDC Token
+        id: invalidate-oidc-token
+        run: |
+          aws sso logout --access-token $AWS_SESSION_TOKEN
