fix: aws sso logout

--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -60,4 +60,4 @@ jobs:
       - name: Invalidate OIDC Token
         id: invalidate-oidc-token
         run: |
-          aws sso logout --access-token $AWS_SESSION_TOKEN
+          aws sso logout
