feat: test to check whether logout functionality works

--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -61,3 +61,6 @@ jobs:
         id: invalidate-oidc-token
         run: |
           aws sso logout
+      - name: Create DNS Zone Route53 part 2
+        id: create-dns-zone-part2
+        run: ./scripts/aws/create_dns_zone.sh
