--- a/.github/workflows/health-check-prod.yml
+++ b/.github/workflows/health-check-prod.yml
@@ -1,14 +1,16 @@
-name: Subdomain takeover monitoring tool health check on AWS
+name: Subdomain takeover monitoring tool health check on AWS production environment
 
 on:
-  workflow_dispatch:
+  #workflow_dispatch:
   schedule:
     - cron: '0 7 * * 2' #Every tuesday at 7:00 UTC
 jobs:
   setup:
     name: Setup environment
     runs-on: ubuntu-24.04
-    environment: dev
+    environment: prod
+    env:
+      DEPLOY_ENV: prod
     permissions:
       id-token: write   # This is required for requesting the OIDC JWT
       contents: read    # This is required for actions/checkout Action
@@ -18,7 +20,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@50ac8dd1e1b10d09dac7b8727528b91bed831ac0
         with:
-          aws-region: eu-south-1
+          aws-region: eu-west-1
           role-to-assume: ${{ secrets.ARN_ROLE }}
           role-session-name: oidc-gha-assume-role-session
       - name: Make scripts executable
@@ -40,9 +42,19 @@ jobs:
       - name: Delete S3 bucket
         id: delete-s3-bucket
         run: ./scripts/aws/delete_s3_bucket.sh
+      - name: Change slack channel to dev
+        id: change-slack-channel-to-dev
+        run: ./scripts/aws/change_slack_channel_to_dev.sh
+        env: 
+          DEV_ENV_VALUE: ${{ secrets.DEV_ENV_VALUE }}
       - name: Invoke lambda and send alert to Slack
         id: invoke-lambda-aws-subdomain-tool
         run: ./scripts/aws/invoke_lambda.sh
+      - name: Change slack channel to prod
+        id: change-slack-channel-to-prod
+        run: ./scripts/aws/change_slack_channel_to_prod.sh
+        env: 
+          PROD_ENV_VALUE: ${{ secrets.PROD_ENV_VALUE }}
       - name: Delete DNS zone and cleanup records
         id: delete-dns-zone
         run: ./scripts/aws/delete_dns_zone.sh
