--- a/.github/workflows/health-check-dev.yml
+++ b/.github/workflows/health-check-dev.yml
@@ -1,6 +1,9 @@
-name: Subdomain takeover monitoring tool health check on AWS dev env
+name: Subdomain takeover monitoring tool health check on AWS develop environment
 
 on:
+  pull_request:
+    branches:
+      - develop
   push:
   workflow_dispatch:
   schedule:
@@ -12,6 +15,7 @@ jobs:
     environment: dev
     env:
       DEPLOY_ENV: dev
+      REGION: ${{ vars.REGION }}
     permissions:
       id-token: write   # This is required for requesting the OIDC JWT
       contents: read    # This is required for actions/checkout Action
@@ -21,7 +25,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@50ac8dd1e1b10d09dac7b8727528b91bed831ac0
         with:
-          aws-region: eu-south-1
+          aws-region: ${{ vars.REGION }}
           role-to-assume: ${{ secrets.ARN_ROLE }}
           role-session-name: oidc-gha-assume-role-session
       - name: Make scripts executable
