--- a/.github/workflows/health-check-prod.yml
+++ b/.github/workflows/health-check-prod.yml
@@ -1,7 +1,11 @@
 name: Subdomain takeover monitoring tool health check on AWS production environment
 
 on:
-  #workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+  push:
+  workflow_dispatch:
   schedule:
     - cron: '0 7 * * 2' #Every tuesday at 7:00 UTC
 jobs:
@@ -20,7 +24,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@50ac8dd1e1b10d09dac7b8727528b91bed831ac0
         with:
-          aws-region: eu-west-1
+          aws-region: ${{ vars.REGION }}
           role-to-assume: ${{ secrets.ARN_ROLE }}
           role-session-name: oidc-gha-assume-role-session
       - name: Make scripts executable
