--- a/.github/workflows/healthy-check-azure-prod.yml
+++ b/.github/workflows/healthy-check-azure-prod.yml
@@ -2,13 +2,19 @@ name: Subdomain takeover monitoring tool health check on Azure
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
   schedule:
-    - cron: '0 11 1-7 * 2'  # Every tuesday of each month at 11:00 UTC+0
+    - cron: '0 7 * * 2' #Every tuesday at 7:00 UTC 
 jobs:
   setup:
     name: Setup environment
     runs-on: ubuntu-24.04
-    environment: dev
+    environment: prod
+    env:
+      DEPLOY_ENV: prod
+      LAMBDA: "azure-lambda"
     permissions:
       id-token: write   # This is required for requesting the OIDC JWT
       contents: read    # This is required for actions/checkout Action
@@ -36,15 +42,15 @@ jobs:
         run: ./scripts/azure/create_dangling_case.sh
       - name: Change slack channel to dev
         id: change-slack-channel-to-dev
-        run: ./scripts/azure/change_slack_channel_to_dev.sh
+        run: ./scripts/common/change_slack_channel_to_dev.sh
         env: 
           DEV_ENV_VALUE: ${{ secrets.DEV_ENV_VALUE }}
       - name: Invoke lambda
         id: invoke-lambda-aws-subdomain-tool
-        run: ./scripts/azure/invoke_lambda.sh
+        run: ./scripts/common/invoke_lambda.sh
       - name: Change slack channel to prod
         id: change-slack-channel-to-prod
-        run: ./scripts/azure/change_slack_channel_to_prod.sh
+        run: ./scripts/common/change_slack_channel_to_prod.sh
         env: 
           PROD_ENV_VALUE: ${{ secrets.PROD_ENV_VALUE }}
       - name: Delete resources
