--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -3,15 +3,6 @@ name: Deploy resources on dev environment
 on:
   push:
   workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment'
-        type: choice
-        required: true
-        default: dev
-        options:
-        - dev
-        - prod
 
 permissions:
   id-token: write # This is required for requesting the JWT
@@ -20,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    environment: dev
     steps:
       - name: Checkout Repository
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
@@ -57,21 +49,11 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build
     steps:
-      - name: Set AWS region from environment
-        id: set-region
-        run: |
-          if [ "${{ inputs.env }}" = "dev" ]; then
-            echo "region=eu-south-1" >> $GITHUB_OUTPUT
-            "role=${{ secrets.DEV_ARN_ROLE }}" >> $GITHUB_OUTPUT
-          else
-            echo "region=eu-west-1" >> $GITHUB_OUTPUT
-            "role=${{ secrets.PROD_ARN_ROLE }}" >> $GITHUB_OUTPUT
-          fi
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e1e17a757e536f70e52b5a12b2e8d1d1c60e04ef
         with:
-          role-to-assume: ${{ steps.set-region.outputs.role }}
-          aws-region: ${{ steps.set-region.outputs.region }}
+          role-to-assume: ${{ secrets.DEV_ARN_ROLE_DEPLOY }}
+          aws-region: eu-south-1
       - name: Download artifact list-accounts-lambda
         uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
         with:
@@ -94,4 +76,4 @@ jobs:
       - name: Run terraform plan
         run: |
           cd infra
-          ./terraform.sh plan ${{ inputs.env }}
+          ./terraform.sh plan dev
