--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -53,7 +53,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@e1e17a757e536f70e52b5a12b2e8d1d1c60e04ef
         with:
           role-to-assume: ${{ secrets.DEV_ARN_ROLE_DEPLOY }}
-          aws-region: eu-south-1
+          aws-region: ${{ vars.REGION }}
       - name: Download artifact list-accounts-lambda
         uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
         with:
