--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,6 +50,8 @@ jobs:
     needs: build
     environment: dev
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e1e17a757e536f70e52b5a12b2e8d1d1c60e04ef
         with:
@@ -79,4 +81,5 @@ jobs:
           ls
           cd infra
           ls
+          chmod +x terraform.sh
           ./terraform.sh plan dev
