--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,8 +1,13 @@
 name: Deploy resources on dev environment
 
 on:
-  push:
   workflow_dispatch:
+  push:
+  pull_request:
+    branches: [ "develop" ]
+    paths:
+      - infra/dev/** #To change in infra/prod/** e create a new role in AWS IAM Center
+    types: closed
 
 permissions:
   id-token: write # This is required for requesting the JWT
@@ -78,8 +83,5 @@ jobs:
           terraform_version: '1.9.3'
       - name: Run terraform plan
         run: |
-          ls
           cd infra
-          ls
-          chmod +x terraform.sh
-          ./terraform.sh plan dev
+          ./terraform.sh apply dev -auto-approve
