--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -81,7 +81,7 @@ jobs:
         uses: hashicorp/setup-terraform@a1502cd9e758c50496cc9ac5308c4843bcd56d36
         with:
           terraform_version: '1.9.3'
-      - name: Run terraform plan
+      - name: Run terraform apply
         run: |
           cd infra
           ./terraform.sh apply dev -auto-approve
