--- a/.github/workflows/health-check-prod.yml
+++ b/.github/workflows/health-check-prod.yml
@@ -1,7 +1,7 @@
 name: Subdomain takeover monitoring tool health check on AWS production environment
 
 on:
-  pull_request:
+  push:
     branches:
       - main
   workflow_dispatch:
