--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,9 +2,9 @@ name: Deploy resources on dev environment
 
 on:
   workflow_dispatch:
-  pull_request:
-    branches: [ "develop" ]
-    types: closed
+  push:
+    branches:
+      - develop
 
 permissions:
   id-token: write # This is required for requesting the JWT
