--- a/.github/workflows/health-check-dev.yml
+++ b/.github/workflows/health-check-dev.yml
@@ -1,7 +1,7 @@
 name: Subdomain takeover monitoring tool health check on AWS develop environment
 
 on:
-  push:
+  pull_request:
     branches:
       - develop
   workflow_dispatch:
